@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-06-26T01:05:15Z",
-  "count_outdated" : 546,
-  "uniques_outdated" : 372,
-  "count" : 549,
-  "uniques" : 375,
+  "timestamp" : "2025-06-29T01:12:58Z",
+  "count_outdated" : 547,
+  "uniques_outdated" : 373,
+  "count" : 550,
+  "uniques" : 376,
   "clones" : [
-    {
-      "timestamp": "2025-06-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-06-15T00:00:00Z",
       "count": 1,
@@ -25,6 +16,15 @@
     },
     {
       "timestamp": "2025-06-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-06-28T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
