@@ -3,17 +3,17 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2025-06-14T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-06-15T00:00:00Z",
       "count": 1,
       "uniques": 1
     },
     {
       "timestamp": "2025-06-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-06-28T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
